<resources>
    <string name="app_name">Third parties</string>
    <string name="area">Area</string>
    <string name="last_agriculture">Last agriculture</string>
    <string name="enter_area_size_in_ha">Enter area size in ha</string>
    <string name="crop_capacity">Crop capacity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="default_notification_channel_id">Channel ID</string>
    <string name="channel_name">Channel name</string>
    <string name="area_size">Area size</string>
</resources>