<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragments.add.SoilConditionFragment">


    <EditText
        android:id="@+id/area_size_field"
        android:layout_width="416dp"
        android:layout_height="46dp"
        android:layout_marginTop="100dp"
        android:ems="10"
        android:hint="@string/enter_area_size_in_ha"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="-4dp" />

    <EditText
        android:id="@+id/last_agriculture_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/last_agriculture"
        app:layout_constraintTop_toBottomOf="@+id/area_size_field"
        tools:layout_editor_absoluteX="171dp" />

    <EditText
        android:id="@+id/crope_capacity_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/crop_capacity"
        app:layout_constraintTop_toBottomOf="@+id/last_agriculture_field"
        tools:layout_editor_absoluteX="171dp" />

    <Button
        android:id="@+id/add_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/add"
        app:layout_constraintTop_toBottomOf="@+id/crope_capacity_field" />
</androidx.constraintlayout.widget.ConstraintLayout>